# OpenGL-Course

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Shaders/: SkyBox.frag  SkyBox.vert  omniShadowMap.frag  omniShadowMap.geom  shader.frag  shader.vert
src/: Camera.cpp  Camera.h  Constans.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OmniShadowMap.cpp  OmniShadowMap.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  SkyBox.cpp  SkyBox.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
